[package]
name = "iterated_rps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = { path = "../graph" }
nannou = "0.18.1"
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false
